[gd_scene load_steps=10 format=3 uid="uid://di3seule2il8t"]

[ext_resource type="Script" path="res://scenes/game/puzzles/maximon/Nodos/puzzle_maximon.gd" id="1_l1i46"]
[ext_resource type="Texture2D" uid="uid://bh0fn2ff8gq12" path="res://assets/sprites/puzzles/maximon/maximon.png" id="1_p5k4f"]
[ext_resource type="Texture2D" uid="uid://c0q5venovutsx" path="res://assets/sprites/puzzles/maximon/vela_roja.png" id="2_hkktg"]
[ext_resource type="Texture2D" uid="uid://icl40te2ynex" path="res://assets/sprites/puzzles/maximon/vela_celeste.png" id="3_b08bh"]
[ext_resource type="Texture2D" uid="uid://bilpmmjre4p20" path="res://assets/sprites/puzzles/maximon/vela_azul.png" id="4_jvi7o"]
[ext_resource type="Texture2D" uid="uid://d21fq0gf6v0gn" path="res://assets/sprites/puzzles/maximon/cigarro.png" id="5_dmtcj"]
[ext_resource type="Texture2D" uid="uid://cy3u8mya116kv" path="res://assets/sprites/puzzles/maximon/sombrero.png" id="6_ib2b4"]
[ext_resource type="Texture2D" uid="uid://r0gdgh01e4ku" path="res://assets/sprites/puzzles/maximon/maximon_front.png" id="8_o61ig"]

[sub_resource type="LabelSettings" id="LabelSettings_rbpum"]
font_size = 20

[node name="Puzzle_maximon" type="Node2D"]
script = ExtResource("1_l1i46")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.00392157, 0.156863, 0.184314, 1)

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(590, 326)
scale = Vector2(0.85, 0.85)
texture = ExtResource("1_p5k4f")

[node name="Objects" type="Node2D" parent="CanvasLayer/Background"]
scale = Vector2(1.17647, 1.17647)

[node name="Sombrero" type="Sprite2D" parent="CanvasLayer/Background/Objects"]
position = Vector2(-40.9999, -134)
scale = Vector2(0.85, 0.85)
texture = ExtResource("6_ib2b4")

[node name="Area2D" type="Area2D" parent="CanvasLayer/Background/Objects/Sombrero"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Background/Objects/Sombrero/Area2D"]
polygon = PackedVector2Array(-227.059, -20, -122.353, -52.9411, -45.8824, -65.8823, -16.4706, -142.353, 35.2941, -175.294, 96.4706, -154.118, 135.294, -102.353, 144.706, -75.2941, 258.823, -51.7647, 287.059, -17.647, 275.294, 42.353, 275.294, 83.5294, 228.235, 123.529, 203.529, 148.235, 163.529, 96.4706, 131.765, 35.2941, 89.4117, 28.2353, 48.2353, 22.353, -12.9412, 24.7059, -57.647, 57.6471, -88.2353, 90.5883, -120, 134.118, -147.059, 152.941, -167.059, 160, -228.235, 132.941, -260, 103.529, -289.412, 38.8236, -280, -7.05878)

[node name="VelaRoja" type="Sprite2D" parent="CanvasLayer/Background/Objects"]
position = Vector2(-254, 225)
scale = Vector2(0.85, 0.85)
texture = ExtResource("2_hkktg")

[node name="Area2D" type="Area2D" parent="CanvasLayer/Background/Objects/VelaRoja"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Background/Objects/VelaRoja/Area2D"]
polygon = PackedVector2Array(-34.1176, -49.4119, -5.88235, -52.9413, -7.05884, -81.1766, 3.52939, -84.706, 7.05881, -52.9413, 35.2941, -47.0589, 43.5294, -12.9413, 45.8823, 21.1764, 25.8823, 49.4117, 43.5294, 72.941, 12.9412, 85.8823, -9.41177, 88.2352, -38.8235, 77.647, -38.8235, 63.5293, -18.8235, 52.941, -40, 21.1764, -44.7059, -7.0589)

[node name="VelaCeleste" type="Sprite2D" parent="CanvasLayer/Background/Objects"]
position = Vector2(-123, 219)
scale = Vector2(0.85, 0.85)
texture = ExtResource("3_b08bh")

[node name="Area2D" type="Area2D" parent="CanvasLayer/Background/Objects/VelaCeleste"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Background/Objects/VelaCeleste/Area2D"]
polygon = PackedVector2Array(-32.941, -43.5295, -8.23517, -47.0589, -12.941, -60.0001, 0.00012207, -95.2942, 10.5884, -67.0589, 8.23541, -47.0589, 29.4119, -42.353, 38.8237, -20.0001, 41.1766, 10.5881, 37.6472, 36.4705, 32.9413, 43.5293, 40.0001, 51.7646, 44.706, 68.2352, 24.706, 89.4117, -1.17633, 95.294, -52.941, 78.8234, -49.4117, 70.5881, -34.1176, 68.2352, -21.1763, 58.8234, -22.3528, 49.4117, -36.4705, 37.647, -42.3528, -6.10352e-05)

[node name="VelaAzul" type="Sprite2D" parent="CanvasLayer/Background/Objects"]
position = Vector2(17.0001, 225)
scale = Vector2(0.85, 0.85)
texture = ExtResource("4_jvi7o")

[node name="Area2D" type="Area2D" parent="CanvasLayer/Background/Objects/VelaAzul"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Background/Objects/VelaAzul/Area2D"]
polygon = PackedVector2Array(-34.1177, -47.0588, -8.23529, -51.7646, -8.23529, -75.2941, 0, -88.2352, 8.23529, -68.2353, 5.88232, -51.7646, 30.5882, -48.2353, 38.8235, -36.4706, 44.7059, -3.52942, 43.5294, 18.8235, 34.1176, 37.6471, 27.0588, 43.5294, 27.0588, 57.6471, 42.3529, 74.1177, 34.1176, 81.1765, -1.17651, 87.0588, -31.7647, 78.8235, -38.8235, 68.2353, -23.5294, 56.4706, -25.8824, 43.5294, -42.353, 28.2353, -47.0588, 3.52942, -42.353, -25.8823)

[node name="Cigarro" type="Sprite2D" parent="CanvasLayer/Background/Objects"]
position = Vector2(60.0001, -25)
scale = Vector2(0.85, 0.85)
texture = ExtResource("5_dmtcj")

[node name="Area2D" type="Area2D" parent="CanvasLayer/Background/Objects/Cigarro"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Background/Objects/Cigarro/Area2D"]
polygon = PackedVector2Array(-49.4117, 9.41177, -41.1765, 3.52942, -28.2353, -1.17645, -11.7647, -7.05881, 16.4706, -15.2941, 32.9412, -20, 42.353, -18.8235, 45.8824, -10.5882, 40, -1.17645, 27.0588, 2.35294, 10.5883, 9.41177, -1.17645, 12.9412, -14.1176, 16.4706, -20, 16.4706, -28.2353, 18.8235, -32.9412, 16.4706)

[node name="Front" type="Sprite2D" parent="CanvasLayer/Background"]
texture = ExtResource("8_o61ig")

[node name="CloseButton" type="Button" parent="CanvasLayer"]
offset_left = 1086.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 39.0
text = "Cerrar"

[node name="Messages" type="Label" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 10.0
offset_right = 480.0
offset_bottom = 128.0
text = "Coloca los objetos en el orden correcto"
label_settings = SubResource("LabelSettings_rbpum")
autowrap_mode = 2
max_lines_visible = 3

[connection signal="pressed" from="CanvasLayer/CloseButton" to="." method="_on_close_button_pressed"]
